<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_operacao_monetaria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.OperacaoMonetariaActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:text="@string/descricao_da_operacao"
            android:textSize="20sp">
        </TextView>


        <EditText
            android:id="@+id/editText_descricao_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20sp"
            android:text="@string/valor_operacao">
        </TextView>

        <EditText
            android:id="@+id/editText_valor_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/categoria_da_operacao">
        </TextView>

        <Spinner
            android:id="@+id/spinner_categorias_credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            android:entries="@array/categorias_credito" />

        <Spinner
            android:id="@+id/spinner_categorias_debito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            android:entries="@array/categorias_debito" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="Mês da operação">
        </TextView>

        <Spinner
            android:id="@+id/spinner_mes_operacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:entries="@array/mes_operacao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/a_operacao_se_repete">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp">

            <RadioGroup
                android:id="@+id/radio_group_operacao_se_repete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_sim_repete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/sim"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_nao_repete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:textSize="17sp"
                    android:text="@string/nao"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_periodo_repeticao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="Selecione o período de repetição">
            </TextView>

            <RadioGroup
                android:id="@+id/radio_group_periodo_repeticao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_repete_diario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/diario"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_repete_semanal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/semanal"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_repete_mensal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="17sp"
                    android:text="@string/mensal"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_cadastrar_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cadastrar_operacao"/>

        <Button
            android:id="@+id/btn_excluir_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:text="@string/excluir_operacao"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>